# Satellites

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  tledata.cpp  tledata.h  tleloader.cpp  tleloader.h
examples/: example2LE.txt  url.txt
report/: 3343_Коршков_АА.docx
resources/: icon.rc  mainwindow.qrc
resources/examples/: example.txt  example2.txt
resources/icons/: window.qrc
resources/report/: 3343_Коршков_АА.docx
src/: TleParser.cpp  main.cpp
src/UI/: InfoWindow.cpp  InfoWindow.hpp  InfoWindow.ui  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  infowindow.cpp  infowindow.hpp  infowindow.ui  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
src/Utils/: TleParser.cpp  TleParser.hpp  TleRecord.hpp  TleStatistics.hpp
task/: TLE regex format.txt
